# NucleoOS-P4

./: .gitattributes  .gitignore  CITATION.cff  CMakeLists.txt  COMMERCIAL.md  CONTRIBUTING.md  GAMEDEV.md  LICENSE.md  PLAN.md  README.md  THIRD_PARTY.md  partitions.csv  sdkconfig.defaults  sdkconfig.defaults.esp32p4
.claude/skills/ota-release/: SKILL.md
.claude/skills/ota-release/scripts/: release.ps1  run_verify.ps1  verify.py
.claude/skills/ui-screenshot/: SKILL.md
.claude/skills/ui-screenshot/scripts/: shot.ps1
.claude/skills/wasm-app/: SKILL.md
.claude/skills/wasm-app/scripts/: build_push.ps1
.github/: pull_request_template.md
apps/abc123/: app.wasm  icon.argb  main.c  manifest.json
apps/abc123/img/: CREDITS.txt  apple.565  ball.565  balloon.565  banana.565  bear.565  bee.565  bell.565  bicycle.565  bird.565  boat.565  book.565  bread.565  bus.565  butterfly.565  cactus.565  cake.565  candy.565  car.565  carrot.565  castle.565  cat.565  cheese.565  cherry.565  chicken.565  clock.565  cloud.565  coconut.565  cookie.565  corn.565  cow.565  crown.565  cup.565  deer.565  die.565  dog.565  dolphin.565  dragon.565  drum.565  duck.565  (+62 more)
apps/cannon/: icon.argb  main.c  manifest.json
apps/ciao/: app.wasm  icon.argb  main.c  manifest.json
apps/nettest/: app.wasm  main.c  manifest.json
apps/pianino/: app.wasm  icon.argb  main.c  manifest.json
apps/tanks/: app.wasm  main.c  manifest.json
apps/timer/: app.wasm  main.c  manifest.json
apps/torch/: app.wasm  main.c  manifest.json
apps/wedge/: app.wasm  main.c  manifest.json
components/nv_anima/: CMakeLists.txt  anima_l1.h  nucleo_anima.c  nucleo_anima_conv.c  nucleo_anima_l1.c  nucleo_anima_lan.c  nucleo_anima_online.c  nucleo_anima_online.h  nucleo_arb_plat_esp.c  nucleo_board.h  nucleo_setup.h  nucleo_setup_shim.c
components/nv_anima/include/: nucleo_anima.h  nucleo_anima_conv.h
components/nv_apps/: CMakeLists.txt  anima_app.cpp  anima_system.cpp  apps_app.cpp  apps_internal.h  calculator_app.cpp  camera_app.cpp  diagnostics_app.cpp  files_app.cpp  gallery_app.cpp  gallery_jpeg_hw.cpp  gallery_jpeg_hw.h  gallery_thumb_cache.cpp  gallery_thumb_cache.h  music_app.cpp  notes_app.cpp  nv_apps.cpp  recorder_app.cpp  secondscreen_app.cpp  settings_app.cpp  sysmon_app.cpp  tasks_app.cpp  terminal_app.cpp  video_app.cpp
components/nv_apps/include/: nv_anima_system.h  nv_apps.h
components/nv_appstore/: CMakeLists.txt  nv_appstore.cpp
components/nv_appstore/include/: nv_appstore.h
components/nv_camera/: CMakeLists.txt  idf_component.yml  nv_camera.c  nv_mp4.c  nv_mp4.h
components/nv_camera/include/: nv_camera.h
components/nv_fonts/: CMakeLists.txt  nv_font_14.c  nv_font_20.c  nv_font_28.c
components/nv_fonts/include/: nv_fonts.h
components/nv_hal/: CMakeLists.txt  idf_component.yml  nv_audio.cpp  nv_backup.cpp  nv_eth.cpp  nv_hal.cpp  nv_hid_host.cpp  nv_rtc.cpp  nv_sd.cpp  nv_usb_audio.cpp  nv_wifi.cpp
components/nv_hal/include/: nv_audio.h  nv_backup.h  nv_eth.h  nv_hal.h  nv_hid_host.h  nv_pins.h  nv_rtc.h  nv_sd.h  nv_usb_audio.h  nv_wifi.h
components/nv_i18n/: CMakeLists.txt  nv_i18n.c
components/nv_i18n/include/: nv_i18n.h
components/nv_kernel/: CMakeLists.txt  nv_bgwork.cpp  nv_config.cpp  nv_crash.cpp  nv_event_bus.cpp  nv_log.cpp  nv_memory_broker.cpp  nv_service_mgr.cpp  nv_time.cpp
components/nv_kernel/include/: nv_bgwork.h  nv_config.h  nv_crash.h  nv_event_bus.h  nv_log.h  nv_memory_broker.h  nv_service_mgr.h  nv_time.h
components/nv_keydeck/: CMakeLists.txt  idf_component.yml  nv_cpu_load.cpp  nv_cpu_load.h  nv_keydeck.cpp
components/nv_keydeck/include/: nv_keydeck.h
components/nv_media/: CMakeLists.txt  idf_component.yml  minimp3.h  nv_media.c  nv_mp3dec.c  nv_mp3dec.h
components/nv_media/include/: nv_media.h
components/nv_ota/: CMakeLists.txt  nv_ota.cpp
components/nv_ota/include/: nv_ota.h
components/nv_sysmon/: CMakeLists.txt  nv_sysmon.c
components/nv_sysmon/include/: nv_sysmon.h
components/nv_theme/: CMakeLists.txt  nv_theme.c
components/nv_theme/include/: nv_theme.h
components/nv_tts/: CMakeLists.txt  nucleo_tts_plan.c  nv_tts.c
components/nv_tts/include/: nv_tts.h
components/nv_ui/: CMakeLists.txt  nv_gesture.cpp  nv_ime.cpp  nv_keyboard_layouts.c  nv_keyboard_layouts.h  nv_notify.cpp  nv_ui.cpp
components/nv_ui/include/: nv_app.h  nv_gesture.h  nv_icons.h  nv_ime.h  nv_notify.h  nv_ui.h  nv_ui_host.h  nv_ui_kit.h  nv_ui_scale.h
components/nv_usb/: CMakeLists.txt  idf_component.yml  nv_usb.c  nv_usb_frame.c  nv_usb_frame.h  nv_usb_hid.c  nv_usb_internal.h  nv_usb_vendor.c
components/nv_usb/include/: nv_usb.h  nv_usb_screen.h
components/nv_usb/tusb/: tusb_config.h  usb_descriptors.c  usb_descriptors.h
components/nv_vplayer/: CMakeLists.txt  nv_mpeg1_impl.c  nv_vplayer.c  pl_mpeg.h
components/nv_vplayer/include/: nv_vplayer.h
components/nv_wasm/: CMakeLists.txt  nv_wasm.cpp  tanks_seed.inc
components/nv_wasm/include/: nv_wasm.h
components/nv_web/: CMakeLists.txt  console.html  nv_web.cpp
components/nv_web/include/: nv_web.h
docs/: WASM_APPS.md
docs/promo/: announcements.md
main/: CMakeLists.txt  app_main.cpp
reference/: RESEARCH.md
registry/: app-aliases.json
sd/: README.md
sd/apps/cannon/: app.wasm
sd/apps/tanks/: manifest.json
sd/nucleos/drivers/windows/: LEGGIMI.txt
sd/web/: ai-keys.js  ai.js  apps.json  boot-fetch.js  copilot.js  dlgate.js  index.html  manifest.webmanifest  micgate.js  nucleo-i18n.js  onboarding.js  shell.js  sw.js
sd/web/i18n/: shell.en.json  shell.it.json
sdk/: README.md  build_app.ps1  push_app.ps1
sdk/include/: nucleo_sdk.h
sdk/src/: nucleo_sdk.c
server/appstore/: README.md  appstore_server.py  catalog.json  publish.py
tools/: Converti Video Nucleo.bat  build_abc_assets.py  build_abc_sounds.py  build_abc_voice.py  decode-coredump.ps1  gen_abc_sfx.py  gen_fonts.ps1  gen_icons.py  gen_pianino_sfx.py  gen_wasm_seed.py  make_app_icon.py  merge_local.py  merge_tts_ops.py  nucleo_video_converter.py  push-web.ps1  sync-sd.ps1  verify-sd.ps1
tools/anima/: gen_aliases.py
(+57 files in other folders)
